构建了概率/线代/微分几何三个可视化子模块-app/modules/

--- a/app/modules/linear_algebra/pages/linear-algebra-module.html
+++ b/app/modules/linear_algebra/pages/linear-algebra-module.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>线性代数可视化模块 - 一图胜千言</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-    <script src="../frontend/global-mathjax.js"></script>
+    <script src="../../../../frontend/global-mathjax.js"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <style>
         * {
@@ -427,8 +427,8 @@
         <a href="特征值分解可视化.html" class="nav-item">特征值分解</a>
         <a href="旋转矩阵可视化.html" class="nav-item">旋转矩阵</a>
         <a href="正交分解可视化.html" class="nav-item">正交分解</a>
-        <a href="../index.html">返回 “线性代数可视化世界”首页</a>
-<a href="../../../index.html" class="nav-item">返回 “万物可视化”首页</a>
+        <a href="../index.html" class="nav-item">返回 “线性代数可视化世界”首页</a>
+        <a href="../../../../index.html" class="nav-item">返回 “万物可视化”首页</a>
     </div>
     
     <div class="main-content">
@@ -595,7 +595,7 @@
                 <div class="path-step">
                     <div class="step-number">4</div>
                     <div class="step-title">向量空间</div>
-                    <div class="step-description">深入理解线性代数的核心理论概念</div>
+                    <div class="step-description">深入理解线性代数的核理论概念</div>
                 </div>
             </div>
         </div>
