--- a/app/modules/linear_algebra/pages/二阶行列式可视化.html
+++ b/app/modules/linear_algebra/pages/二阶行列式可视化.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>二阶行列式可视化 - 一图胜千言</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/plotly.js/2.26.0/plotly.min.js"></script>
-    <script src="../frontend/global-mathjax.js"></script>
+    <script src="../../../../frontend/global-mathjax.js"></script>
     <script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
     <style>
         * {
@@ -336,7 +336,7 @@
         <a href="矩阵运算可视化.html" class="nav-item">矩阵运算</a>
         <a href="向量空间可视化.html" class="nav-item">向量空间</a>
         <a href="../index.html">返回 “线性代数可视化世界”首页</a>
-<a href="../../../index.html" class="nav-item">返回 “万物可视化”首页</a>
+<a href="../../../../index.html" class="nav-item">返回 “万物可视化”首页</a>
     </div>
     
     <div class="page-content">
