--- a/app/modules/linear_algebra/pages/向量空间可视化.html
+++ b/app/modules/linear_algebra/pages/向量空间可视化.html
@@ -13,7 +13,7 @@
             }
         };
     </script>
-    <script src="../frontend/global-mathjax.js"></script>
+    <script src="../../../../frontend/global-mathjax.js"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <style>
         * {
@@ -383,7 +383,7 @@
         <a href="矩阵运算可视化.html" class="nav-item">矩阵运算</a>
         <a href="向量空间可视化.html" class="nav-item active">向量空间</a>
         <a href="../index.html">返回 “线性代数可视化世界”首页</a>
-<a href="../../../index.html" class="nav-item">返回 “万物可视化”首页</a>
+ <a href="../../../../index.html" class="nav-item">返回 “万物可视化”首页</a>
     </div>
     
     <div class="page-content">
