--- a/app/modules/linear_algebra/pages/特征值分解可视化.html
+++ b/app/modules/linear_algebra/pages/特征值分解可视化.html
@@ -62,7 +62,7 @@
       <li class="sidebar-item"><a href="旋转矩阵可视化.html">旋转矩阵</a></li>
       <li class="sidebar-item"><a href="正交分解可视化.html">正交分解</a></li>
       <li class="sidebar-item"><a href="../index.html">返回 “线性代数可视化世界”首页</a>
-<a href="../../../index.html" class="nav-item">返回 “万物可视化”首页</a></li>
+<a href="../../../../index.html" class="nav-item">返回 “万物可视化”首页</a></li>
     </ul>
   </div>
   <div class="page-content">
