--- a/app/modules/linear_algebra/pages/矩阵高斯消元法可视化.html
+++ b/app/modules/linear_algebra/pages/矩阵高斯消元法可视化.html
@@ -70,7 +70,7 @@
 +    <a href="旋转矩阵可视化.html" class="nav-item">旋转矩阵</a>
 +    <a href="正交分解可视化.html" class="nav-item">正交分解</a>
 +    <a href="../index.html">返回 “线性代数可视化世界”首页</a>
-<a href="../../../index.html" class="nav-item">返回 “万物可视化”首页</a>
+<a href="../../../../index.html" class="nav-item">返回 “万物可视化”首页</a>
 +  </div>
 +  <div class="page-content">
 +   <div class="page" data-autolatex="true">
