--- a/app/modules/probability_statistics/pages/二项分布现代化可视化_离线版.html
+++ b/app/modules/probability_statistics/pages/二项分布现代化可视化_离线版.html
@@ -676,7 +676,7 @@
         <div class="nav-item" onclick="window.location.href='指数分布交互式可视化.html'">指数分布</div>
         <div class="nav-item" onclick="window.location.href='正态分布交互式可视化.html'">正态分布</div>
         <div class="nav-item" onclick="window.location.href='../index.html'">返回 “概率与统计可视化世界”首页</div>
-<div class="nav-item" onclick="window.location.href='../../../index.html'">返回 “万物可视化”首页</div>
+        <div class="nav-item" onclick="window.location.href='../../../../index.html'">返回 “万物可视化”首页</div>
     </div>
     
     <div class="page-content">
