整个可视化页面切换到Claude Code + GLM4.5来开发

--- a/app/modules/probability_statistics/index.html
+++ b/app/modules/probability_statistics/index.html
@@ -51,11 +51,35 @@
         <a class="button" href="./pages/%E6%B3%8A%E6%9D%BE%E5%88%86%E5%B8%83%E4%BA%A4%E4%BA%92%E5%BC%8F%E5%8F%AF%E8%A7%86%E5%8C%96_%E5%AE%8C%E6%95%B4%E7%A6%BB%E7%BA%BF%E7%89%88.html">进入</a>
       </div>
     </div>
+    
+    <div class="card" data-q="正态分布 3σ 原则可视化 ">
+      <h3>正态分布 3σ 原则可视化</h3>
+      <p></p>
+      <div class="actions">
+        <a class="button" href="./pages/normal_3sigma_principle.html">进入</a>
+      </div>
+    </div>
+
+    <div class="card" data-q="正态分布 上α分位点 交互式可视化 ">
+      <h3>正态分布 上α分位点 交互式可视化</h3>
+      <p></p>
+      <div class="actions">
+        <a class="button" href="./pages/normal_upper_alpha_quantile.html">进入</a>
+      </div>
+    </div>
+
+    <div class="card" data-q="二维正态分布 分布函数 交互式可视化 ">
+      <h3>二维正态分布 分布函数 交互式可视化</h3>
+      <p></p>
+      <div class="actions">
+        <a class="button" href="./pages/normal_bivariate_cdf.html">进入</a>
+      </div>
+    </div>
     </div>
 
     <div class="footer">
-      <span>概念数量：4</span>
-      <span>最后生成时间：2025-10-22 00:28</span>
+      <span>概念数量：7</span>
+      <span>最后生成时间：2025-10-26 00:40</span>
     </div>
   </div>
 
