--- a/app/modules/probability_statistics/pages/泊松分布交互式可视化_完整离线版.html
+++ b/app/modules/probability_statistics/pages/泊松分布交互式可视化_完整离线版.html
@@ -444,7 +444,11 @@
         <div class="nav-item active" onclick="window.location.href='泊松分布交互式可视化_完整离线版.html'">泊松分布</div>
         <div class="nav-item" onclick="window.location.href='指数分布交互式可视化.html'">指数分布</div>
         <div class="nav-item" onclick="window.location.href='正态分布交互式可视化.html'">正态分布</div>
-        <div class="nav-item" onclick="window.location.href='../index.html'">返回 “概率与统计可视化世界”首页</div>
+        <div class="nav-item" onclick="window.location.href='normal_3sigma_principle.html'">正态分布 3σ 原则</div>
+        <div class="nav-item" onclick="window.location.href='./normal_upper_alpha_quantile.html'">正态分位 上α 分位点</div>
+        <div class="nav-item" onclick="window.location.href='./normal_bivariate_cdf.html'">二维正态分布 分布函数</div>
+        <!-- 返回首页 -->
+        <div class="nav-item" onclick="navigateTo('../index.html')">返回模块主页</div>
 <div class="nav-item" onclick="window.location.href='../../../../index.html'">返回 “万物可视化”首页</div>
     </div>
     
