--- a/index.html
+++ b/index.html
@@ -273,6 +273,15 @@
                 </p>
                 <a class="module-button" href="app/modules/differential_geometry/index.html">进入模块</a>
             </div>
+
+            <div class="module-card">
+                <div class="module-icon">🤖</div>
+                <h2 class="module-title">AI 可视化生成器</h2>
+                <p class="module-description">
+                    通过自然语言描述，一键生成交互式可视化。
+                </p>
+                <a class="module-button" href="app/modules/ai_visualizer/index.html">进入生成器</a>
+            </div>
         </div>
 
         <footer class="footer">
