--- a/old versions/概率论与数理统计可视化/正态分布交互式可视化.html
+++ b/old versions/概率论与数理统计可视化/正态分布交互式可视化.html
@@ -19,7 +19,7 @@
             }
         };
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <script src="../frontend/global-mathjax.js"></script>
     <script type="text/javascript" id="MathJax-script" async
         src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
     </script>
@@ -672,16 +672,12 @@
 <body>
     <div class="sidebar">
         <h3 class="sidebar-title">概率论与数理统计</h3>
-        <div class="nav-item" onclick="window.location.href='../index.html'">模块概览</div>
+        <div class="nav-item" onclick="window.location.href='../probability-module.html'">模块概览</div>
         <div class="nav-item" onclick="window.location.href='二项分布现代化可视化_离线版.html'">二项分布</div>
         <div class="nav-item" onclick="window.location.href='泊松分布交互式可视化_完整离线版.html'">泊松分布</div>
         <div class="nav-item" onclick="window.location.href='指数分布交互式可视化.html'">指数分布</div>
         <div class="nav-item" onclick="window.location.href='正态分布交互式可视化.html'">正态分布</div>
-        <div class="nav-item" onclick="window.location.href='normal_3sigma_principle.html'">正态分布 3σ 原则</div>
-        <div class="nav-item" onclick="window.location.href='./normal_upper_alpha_quantile.html'">正态分位 上α 分位点</div>
-        <div class="nav-item" onclick="window.location.href='./normal_bivariate_cdf.html'">二维正态分布 分布函数</div>
-        <!-- 返回首页 -->
-        <div class="nav-item" onclick="window.location.href='../index.html'">返回模块主页</div>
+        <div class="nav-item" onclick="window.location.href='../index.html'">返回主页</div>
     </div>
     <div class="page-content">
         <div class="container">
